--- a/index.html
+++ b/index.html
@@ -180,33 +180,33 @@
                 <h2 class="special_border">Projects</h2>
                 <ul class="shuffle">
                     <li class="active fillter" data-filter="all">All</li>
-                    <li class="fillter" data-filter=".mobile">Mobile</li>
-                    <li class="fillter" data-filter=".coffee">Coffee</li>
-                    <li class="fillter" data-filter=".video">Video</li>
+                    <li class="fillter" data-filter=".react">React</li>
+                    <li class="fillter" data-filter=".responsive">Responsive</li>
+                    <li class="fillter" data-filter=".static">Static</li>
                 </ul>
                 <div id="Container" class="gallery">
-                    <div class="mix video">
+                    <div class="mix static">
                         <a href="https://hackyoursocial.herokuapp.com/" target="_blank"><div class="overlay">Project</div></a>
                         <img src="images/works/Screenshot_26.jpg" alt="project">
                     </div>
-                    <div class="mix coffee">
+                    <div class="mix responsive">
                       <a href="http://muhannad1989.github.io/hyf-html-css/week1" target="_blank"><div class="overlay">CV</div></a>
                         <img src="images/works/cv.jpg" alt="CV">
                     </div>
-                    <div class="mix mobile">
+                    <div class="mix react">
                         <a href="http://muhannad1989.github.io/hyf-html-css/week3" target="_blank"><div class="overlay">Responsive</div></a>
                         <img src="images/works/responsive.jpg" alt="Responsive">
                     </div>
-                    <div class="mix video">
+                    <div class="mix static">
                         <a href="https://muhannad1989.github.io/hyf-html-css/week3v1.0/" target="_blank"><div class="overlay">Government</div></a>   
                        
                         <img src="images/works/goverment.jpg" alt="government">
                     </div>
-                    <div class="mix coffee">
+                    <div class="mix responsive">
                         <a href="https://muhannad1989.github.io/Book/" target="_blank"><div class="overlay">Book</div></a>   
                         <img src="images/works/book.jpg" alt="book">
                     </div>
-                    <div class="mix mobile" >
+                    <div class="mix react" >
                         <a href="https://codepen.io/muhannadjudah/full/madOey" target="_blank"><div class="overlay">Template</div></a>   
                         <img src="images/works/template.jpg" alt="template">
                     </div>
